--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
 body {
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
@@ -17,7 +18,8 @@ body {
     background-color: #030416;
     color: white;
 }
-a:link, a:visited {
+a:link.headbutt, 
+a:visited.headbutt {
     background-color: #215cff;
     color: white;
     padding: 14px 25px;
@@ -26,8 +28,8 @@ a:link, a:visited {
     display: inline-block;
     border-radius: 6px;
 }
-a:hover,
-a:active {
+a:hover.headbutt,
+a:active.headbutt {
     background-color: #183bee;
     box-shadow: inset 0 0 0 3px #215cff;
 }
@@ -36,11 +38,14 @@ img {
     height:auto;
     width: 300px;
     padding-right: 40px;
+    display: flex;
+    flex-basis: auto;
+    flex-shrink: initial;
 }
 
 .hlogo {
     font-size: 20px;
-    font-weight: 800;
+    font-weight: 1000;
     padding-left: 32px;
     padding-top: 10px;
 }
@@ -80,4 +85,112 @@ li {
     justify-content: space-evenly;
     padding-top: 30px;
     padding-bottom: 60px;
+}
+
+info {
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 100px;
+}
+
+.infhead {
+    color: #030416;
+    font-size: 24px;
+    font-weight: 1000;
+    margin-top: 100px;
+    margin-bottom: 36px;
+    align-self: center;
+}
+
+.portimgs {
+ display: flex;
+ justify-content:space-evenly;
+ flex-wrap: wrap;
+}
+
+.portimgs.img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #565656;
+    font-weight:lighter;
+}
+
+.imgone,
+.imgtwo,
+.imgthree,
+.imgfour {
+    border: 4px solid #215cff;
+    border-radius: 10px;
+    flex-basis: auto;
+    padding: 0px
+}
+
+.imgtext {
+    padding: 12px;
+    max-width: 160px;
+}
+
+.quote {
+    background-color: #d8d8d8;
+    padding-bottom: 50px;
+}
+.quotetext {
+    font-size: 30px;
+    font-style: italic;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+}
+.quoteauthor {
+    padding-right: 180px;
+    font-weight:bolder;
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+footer {
+    background-color: #215cff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    margin-inline: 13%;
+    margin-top: 60px;
+    border-radius: 15px;
+    padding-inline: 8%;
+    color: white;
+}
+.footertext.head {
+    font-weight: bolder;
+    font-size: 17px;
+    padding-bottom: 5px
+}
+.footertext.sub {
+    padding-right: 20px;
+    font-size: 14px;
+}
+.footbutt {
+    background-color: #215cff;
+    color: white;
+    text-decoration: none;
+    padding: 10px 25px;
+    border: 3px solid white;
+    border-radius: 10px;
+
+}
+
+.bottombar {
+    background-color: #030416;
+    color: white;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: 60px;
 }
