--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     background-color: #030416;
     color: white;
 }
+
 a:link.headbutt, 
 a:visited.headbutt {
     background-color: #215cff;
@@ -36,7 +37,7 @@ a:active.headbutt {
 
 img {
     height:auto;
-    width: 300px;
+    width: 315px;
     padding-right: 40px;
     display: flex;
     flex-basis: auto;
@@ -83,6 +84,7 @@ li {
 .headbody {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     padding-top: 30px;
     padding-bottom: 60px;
 }
@@ -117,6 +119,7 @@ info {
     justify-content: center;
     color: #565656;
     font-weight:lighter;
+    text-decoration: none;
 }
 
 .imgone,
@@ -193,4 +196,25 @@ footer {
     align-items: center;
     padding: 20px;
     margin-top: 60px;
+}
+
+.listhobs {
+    display: flex;
+    color: #030416;
+    justify-content: center;
+    padding-inline: 5%;
+}
+
+.portlinks {
+    text-decoration: none;
+    color: #030416;
+}
+
+.hobbies {
+    color: #030416;
+    font-size: 24px;
+    font-weight: 1000;
+    margin-top: 100px;
+    margin-bottom: 36px;
+    align-self: center;
 }
